--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Bebas Neue Cyrillic';
+  src: local('Bebas Neue Cyrillic'), local('BebasNeueCyrillic'),
+    url('../fonts/BebasNeueCyrillic.woff2') format('woff2'),
+    url('../fonts/BebasNeueCyrillic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 * {
   box-sizing: border-box;
 }
@@ -48,4 +57,63 @@ body {
   line-height: 20px;
   text-decoration: none;
   color: #fff;
+}
+.main {
+  max-width: 1280px;
+  margin: auto;
+  padding-top: 54px;
+  display: flex;
+}
+
+.main-info {
+  flex-grow: 1;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:space-between;
+}
+.home-image path {
+  opacity: 0;
+  
+}
+.home-image path:hover {
+  opacity: 0.75;
+  cursor: pointer;
+}
+.counter-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.counter-button {
+  background-color:#fff;
+  border: none;
+  cursor: pointer;
+}
+.counter-arrow-down {
+  transform:rotateX(180deg);
+}
+.main-tittle {
+  margin: 0;
+  font-family: 'Bebas Neue Cyrillic', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 37px;
+  line-height: 44px;
+  color: #635854;
+}
+.counter {
+  color:#635854;
+  font-family: 'Bebas Neue Cyrillic';
+  font-size: 124px;
+  margin-bottom: 8px;
+}
+.button-primary {
+  background: #3596F5;
+  border-radius: 6px;
+  color:#fff;
+  border:none;
+  padding: 16px 36px;
+  cursor: pointer;
 }
